// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'contains backtick (1) - delimiter is …' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className={\`lorem ipsum do\\\`or sit amet consectetur adipiscing elit
        proin ex massa hendrerit eu posuere\`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'contains backtick (2) - delimiter is …' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className={\`lorem ipsum do\\\`or sit amet consectetur adipiscing elit
        proin ex massa hendrerit eu posuere\`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'contains backtick (3) - delimiter is …' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className={\`lorem ipsum do\\\`or sit amet consectetur adipiscing elit
        proin ex massa hendrerit eu posuere\`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'contains double quote (1) - delimiter…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div className={'lorem ipsum do"or sit amet'}>
      {children}
    </div>
  );
}
"
`;

exports[`'contains double quote (2) - delimiter…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div className={'lorem ipsum do"or sit amet'}>
      {children}
    </div>
  );
}
"
`;

exports[`'contains double quote (3) - delimiter…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div className={'lorem ipsum do"or sit amet'}>
      {children}
    </div>
  );
}
"
`;

exports[`'contains single quote (1) - delimiter…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div className={"lorem ipsum do'or sit amet"}>
      {children}
    </div>
  );
}
"
`;

exports[`'contains single quote (2) - delimiter…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div className={"lorem ipsum do'or sit amet"}>
      {children}
    </div>
  );
}
"
`;

exports[`'contains single quote (3) - delimiter…' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div className={"lorem ipsum do'or sit amet"}>
      {children}
    </div>
  );
}
"
`;
